# Platinum

./: CMakeLists.txt  FindNeptune.cmake
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Devices/: CMakeLists.txt
Source/Devices/MediaConnect/: CMakeLists.txt
Source/Devices/MediaRenderer/: CMakeLists.txt
Source/Devices/MediaServer/: CMakeLists.txt
Source/Platinum/: CMakeLists.txt
cmake/: FindPlatinum.cmake  Macros.cmake  platinum.pc.cmake
